styles/index.css
@import url("./base/base.css");

@import url("./layout/header.css");
@import url("./layout/footer.css");

@import url("./components/divider.css");

@import url("./utils.css");

@font-face {
  font-family: "Gravita GEO Medium";
  src: url("./../fonts/Gravita-GEO-Medium.otf");
  font-display: swap;
}

@font-face {
  font-family: "Gravita GEO Light";
  src: url("./../fonts/Gravita-GEO-Light-.otf");
  font-display: swap;
}

@font-face {
  font-family: "Dosis Light";
  src: url("./../fonts/Dosis-Light.ttf");
  font-display: swap;
}

@font-face {
  font-family: "TT Commons Black";
  src: url("./../fonts/TT-Commons-Black.otf");
  font-display: swap;
}

.projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 80%;
  border-inline: 1px solid #ffffff;
  max-width: 1920px;
}

.projects__moodynne {
  display: none;
  grid-template-columns: repeat(12, 1fr);
  width: 75%;
  max-width: 1920px;
  border-inline: 1px solid #ffffff;
  column-gap: 14px;
  row-gap: 16px;
}

.projects__moody {
  grid-column: 1 / -1;
  width: 100%;
  height: auto;
  object-fit: cover;
}

.projects__nne {
  grid-column: 1 / 8;
  width: 100%;
  height: auto;
}

.projects__pic-wrapper {
  grid-column: 8 / 13;
  position: relative;
}

.projects__pic {
  width: 100%;
  height: 100%;
  object-fit: cover;
  aspect-ratio: 14 / 6;
}

.projects__ilyes {
  position: absolute;
  bottom: 0;
  left: 5%;
  width: 57.5%;
}

.projects__skills {
  display: none;
  grid-template-columns: repeat(12, 1fr);
  width: 75%;
  max-width: 1920px;
  border-inline: 1px solid #ffffff;
  border-bottom: 1px solid #ffffff;
}

.projects__skills-spacing {
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  width: 100%;
  height: clamp(4rem, 3.5968rem + 2.0161vw, 6.5rem);
  outline: 1px solid #ffffff;
}

.projects__skills-spacing-divider {
  grid-column: 1 / 5;
  outline: 1px solid #ffffff;
  width: 100%;
  height: 100%;
}

.projects__skills h2,
.projects__title {
  font-family: "TT Commons Black";
  font-weight: normal;
  font-size: clamp(5rem, 2.2727rem + 13.6364vw, 11rem);
  color: #ffffff;
  padding: 0.625rem 0 1.25rem 0;
  border-bottom: 1px solid #ffffff;
  text-align: center;
  width: 100%;
}

.projects__skills h2 {
  border-top: 1px solid #ffffff;
  text-align: left;
  grid-column: 1 / 5;
  font-size: clamp(4rem, -0.125rem + 8.5938vw, 12.25rem);
  padding-left: clamp(0.75rem, 0.125rem + 1.3021vw, 2rem);
}

.projects__skills-chips {
  grid-column: 5 / 13;
  width: 100%;
  height: 100%;
  border-top: 1px solid #ffffff;
  border-left: 1px solid #ffffff;
  grid-row: span 2;
}

.marquee {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  gap: clamp(0.75rem, 0.15rem + 0.9375vw, 1.5rem);
  overflow: hidden;
  flex-wrap: nowrap;
  justify-content: center;
}

.marquee__track {
  display: inline-flex;
  align-items: center;
  white-space: nowrap;
}

.chip {
  display: inline-block;
  font-family: "Gravita GEO Medium";
  font-size: clamp(0.625rem, 0.325rem + 0.4688vw, 1rem);
  font-weight: normal;
  background-color: #ffffff;
  padding: clamp(0.5rem, -0.1rem + 0.9375vw, 1.25rem) clamp(1.25rem, 0.25rem + 1.5625vw, 2.5rem);
  border-radius: 40px;
  width: fit-content;
  text-wrap: nowrap;
  text-align: center;
  margin-left: clamp(0.75rem, 0.15rem + 0.9375vw, 1.5rem);
}

.projects__skills-arrow {
  grid-column: 1 / 5;
  width: 100%;
  height: auto;
  padding: 2.5rem clamp(2.75rem, 0.55rem + 3.4375vw, 5.5rem);
}

.projects__arrows {
  width: 100%;
  height: auto;
  object-fit: contain;
  padding: 0.25rem 0.25rem clamp(0.625rem, 0.1786rem + 2.2321vw, 1.25rem) 0.25rem;
  border-bottom: 1px solid #ffffff;
}

.project-card__infos,
.project-card {
  display: flex;
  flex-direction: column;
  text-decoration: none;
}

.project-card__infos {
  padding: 1rem 1.25rem;
}

.project-card:first-of-type {
  margin-top: 1rem;
}

.project-card__thumbnail {
  width: 100%;
  height: auto;
  object-fit: cover;
  aspect-ratio: 650 / 274;
}

.project-card__title {
  font-family: "Gravita GEO Light";
  font-size: 1.25rem;
  font-weight: normal;
  color: #ffffff;
}

.project-card__description {
  font-family: "Dosis Light";
  font-size: 0.75rem;
  font-weight: normal;
  color: #ffffff;
}

/* sm */
@media (min-width: 640px) {
}

/* md */
@media (min-width: 768px) {
  .projects {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    align-items: stretch;
    column-gap: clamp(0.5rem, -0.1667rem + 1.3889vw, 1.5rem);
  }
  .projects__title {
    grid-column: 1 / 6;
    font-size: clamp(4rem, -0.125rem + 8.5938vw, 12.25rem);
    height: 100%;
    align-content: center;
    border-bottom: none;
    text-align: left;
    padding: 0;
    padding-left: clamp(0.75rem, 0.125rem + 1.3021vw, 2rem);
  }
  .projects__arrows {
    grid-column: 6 / 13;
    grid-row: 1;
    border-bottom: none;
    border-left: 1px solid #ffffff;
  }
  .project-card:first-of-type {
    margin-top: 0;
  }
  .project-card {
    grid-column: span 3;
  }
  .project-card__thumbnail {
    outline: 1px solid #ffffff;
  }
  #take-a-break,
  #marmite-joyeuse {
    grid-column: span 5;
  }
  #take-a-break .project-card__thumbnail,
  #marmite-joyeuse .project-card__thumbnail {
    aspect-ratio: 587 / 549;
  }
  #anthropologie,
  #meeal {
    grid-column: span 7;
  }
  #anthropologie .project-card__thumbnail,
  #meeal .project-card__thumbnail {
    aspect-ratio: 831 / 549;
  }
  #jpo-diderot,
  #memoire-dnmade {
    grid-column: span 8;
  }
  #jpo-diderot .project-card__thumbnail,
  #memoire-dnmade .project-card__thumbnail {
    aspect-ratio: 953 / 549;
  }
  #typo-doppler,
  #typo-meeal {
    grid-column: span 4;
  }

  #typo-doppler .project-card__thumbnail,
  #typo-meeal .project-card__thumbnail {
    aspect-ratio: 465 / 549;
  }

  #meeal > .project-card__infos,
  #take-a-break > .project-card__infos,
  #typo-meeal > .project-card__infos,
  #jpo-diderot > .project-card__infos {
    padding-left: 0;
  }
}

/* lg */
@media (min-width: 1024px) {
  .projects {
    width: 75%;
  }
  .projects__skills,
  .projects__moodynne {
    display: grid;
  }
}

/* xl */
@media (min-width: 1280px) {
}

/* 2xl */
@media (min-width: 1536px) {
}

/* 3xl */
@media (min-width: 1920px) {
}

